--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-    <h1>Alura Midi</h1>
+    <h1 id="h1">Alura Midi</h1>
 
     <section class="teclado">
         <button class="tecla tecla_pom">Pom</button>
@@ -43,6 +43,6 @@
     <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
     <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
     <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
-
+    <script src="main.js"></script>
 </body>
 </html>
